<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Echo</string>

    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_login">Sign in</string>
    <string name="logo_description">This is echo logo</string>
    <string name="hint_username">UserName</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="txt_view_sign_up"><u>Sign Up</u></string>
    <string name="txt_view_forgot_pass"><u>Forgot Pass</u></string>
    <string name="btn_submit">Submit</string>
    <string name="btn_confirm">Confirm</string>
    <string name="title_forgot_pass">Forgot Your Pass?</string>
    <string name="title_forgot_pass_confirm">Confirm your new password</string>
    <string name="reset_pass_success">Reset Password sent to your Email</string>
    <string name="reset_pass_failed">Please check your Email Address</string>
    <string name="reset_pass_confirm_success">Confirm new password is successful</string>
    <string name="reset_pass_confirm_failed">Please check your new password</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="btn_update">Update</string>
    <string name="btn_edit">Edit</string>

    <string name="hint_birthday">Birthday</string>
    <string name="hint_gender">Gender</string>
    <string name="btn_sign_up">Sign up</string>

    <string name="title_activity_main_home">Echo</string>

    <string name="email_isEmpty">Email is required</string>
    <string name="email_invalid">Please enter a valid email</string>
    <string name="username_isEmpty">Username is required</string>
    <string name="username_minimum_length">Username length minimum should be 4 characters</string>
    <string name="password_isEmpty">Password is required</string>
    <string name="password_minimum_length">Password length minimum should be 6 characters</string>
    <string name="user_register_success">Successfully Registered</string>
    <string name="user_register_failed">Registration Failed</string>,
    <string name="validation_failed">Please check your email and password</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_sign_out">Sign Out</string>
    <string name="hint_full_name">FullName</string>
    <string name="your_profile_picture">Your Profile Picture</string>
    <string name="btn_save">Save</string>
    <string name="full_name_is_empty">FullName is empty</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="text_title_gender">Gender:</string>
    <string name="hind_gender">Gender</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_new_password">Confirm New Password</string>
    <string name="hint_default_email">echo@echo.com</string>
    <string name="post_app_bar">Post</string>
    <string name="title_activity_post">Post</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="title_post">Post</string>
    <string name="select_a_image">Select a Image</string>
    <string name="title_required">Title is required</string>
    <string name="title_maximum_chars">Title length no more than 140 characters</string>
    <string name="description_is_empty">Description is required</string>
    <string name="description_minimum_chars">Description minimum characters is 6</string>
    <string name="source_is_empty">Source is required</string>
    <string name="source_minimum_chars">Source minimum characters is 10 characters</string>
    <string name="confirm_password_required">Confirm Password is Required</string>
    <string name="confirm_password_not_match">Confirm Password doesn\'t match</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="comments">Comments</string>

    PostActivityPost Category-->
    <array name="spinnerCategory">
        <item>Trending</item>
        <item>Sport</item>
        <item>Travel</item>
        <item>Food</item>
        <item>Health</item>
        <item>Showbiz</item>
    </array>

</resources>
